	* 

2003-12-05  Nick Clifton  <nickc@redhat.com>

	* config/tc-sh.c (md_show_usage): Fix compilation errors
	introduced by the previous delta.

2003-12-03  Alexandre Oliva  <aoliva@redhat.com>

	* config/tc-sh.c: Add support for sh4a and no-fpu variants.
	* testsuite/gas/sh/basic.exp: Call tests for sh4a.
	* testsuite/gas/sh/{err-sh4a-fp.s, err-sh4a.s, 
	err-sh4al-dsp.s, sh4a-dsp.d, sh4a-dsp.s, sh4a-fp.d, 
	sh4a-fp.s, sh4a.d, sh4a.s, sh4al-dsp.d, sh4al-dsp.s:
	New files, tests for sh4a and related variants.
	
2003-12-05  Michael Snyder  <msnyder@redhat.com>

	* config/tc-sh.c (md_show_usage): Mention new -isa options.
	* doc/c-sh.texi: Document new -isa options.
	* doc/c-sh64.texi: Ditto.
	* NEWS: Mention new support for sh4a.

2003-12-03  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-alpha.c (s_alpha_end): Don't crash if there is no
	matching .ent.

2003-12-04  Alan Modra  <amodra@bigpond.net.au>

	* tc.h (md_pcrel_from): Don't declare if defined as a macro.

2003-12-03  Kazuhiro Inaoka <inaoka.kazuhiro@renesas.com>

	* config/tc-m32r.h : Add support for new machine m32r2.
	* config/tc-m32r.c : Likewise.
	Add new command line switches and directives to allow endian-ness
	to be selected and some warnings to be turned into errors.
	(line_separator_chars) : Use '!'.
	* doc/c-m32r.texi: Document new switches and directives.
	* NEWS: Mention new support.

2003-12-03  Dave Airlie  <airlied@linux.ie>

	* configure.in: Likewise.
	* configure: Regenerate.
	* config/tc-vax.c (md_shortopts): Add 'Q'.
	(md_parse_option): Ignore 'Q' for now.

2003-12-02  Kazu Hirata  <kazu@cs.umass.edu>

	* messages.c: Convert to ISO-C.
	* obj.h: Likewise.
	* output-file.c: Likewise.
	* output-file.h: Likewise.
	* sb.c: Likewise.
	* sb.h: Likewise.
	* stabs.c: Likewise.
	* subsegs.c: Likewise.
	* subsegs.h: Likewise.
	* tc.h: Likewise.

2003-12-02  Kazu Hirata  <kazu@cs.umass.edu>

	* config/obj-elf.c: Remove ARGSUSED.

2003-12-02  Alan Modra  <amodra@bigpond.net.au>
